duicontrolpanel (0.11.3~unreleased) unstable; urgency=low

  [ Robert Manner ]
  * Changes: mostused build option is working again
  * Fixes: NB#218906 - Settings app goes invisible when we tap on Feeds
    item in the Notifications view
  * Fixes: NB#218900 - settings UI is shown in applet view when tried to
    relaunch in a given scenario

  [ Sandor Pinter ]
  * Fixes: NB#219212 - 'Events feeds' not aligned properly in
    Notifications view.
  * Fixes: NB#219608 - drilldown icon is black in the list items which
    use the style when it should be white
  * Fixes: NB#219156 - Activate/Deactivate Offline mode button in
    connections is not consistent with the inverted theme.

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Tue, 18 Jan 2011 14:37:13 +0100

duicontrolpanel (0.11.2.1) unstable; urgency=low

  * Temporarily disables running applets outprocess by default, since it
    still causes some problems. It can be enabled with using -outprocess
    parameter

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 13 Jan 2011 15:27:44 +0100

duicontrolpanel (0.11.2) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#194151 - <coverity> defects from libdialerui/0.0.6.30_0m6

  [ Robert Manner ]
  * documentation fixes
  * Fixes: no exec right for duicontrolpanel on meego
  * Changes: new category "Events feed", accessible from Notifications
  * Fixes: translation catalog for categories is not loaded

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 12 Jan 2011 17:17:51 +0100

duicontrolpanel (0.11.1) unstable; urgency=low

  * Changes: one line applet brief is top aligned
  * Changes: two new icon ids for mainpage
  * Fixes: NB#215724 - 'duicontrolpanel' package requests non-existing
    security token
  * New: Building docs,tests,translations can be disabled through
    DEB_BUILD_OPTIONS
  * Fixes: NB#211971 - meegotestrunner will be deprecated

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 05 Jan 2011 11:23:36 +0100
